Add createMany product with neo4j and count endpoints
